--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,17 @@
 /* Space out content a bit */
+* {
+  color: orange;
+}
+
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  background: url(../images/food-kitchen-cutting-board-cooking.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: #000,
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
