--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,21 @@
 <h2 class="page-header">My Recipe Box</h2>
 <p>Welcome to your Recipe Box</p>  
-<form method="post" action="/users/myRecipeBox">
-  	<div class="row form-group col-xs-3">
-    	<label>My Recipes</label>
-    	<input type="text" class="form-control" name="myRecipeBox" placeholder="My Recipes">
- 	 </div>
-  	<div class="row col-md-3">
-  		<button type="submit" class="btn btn-default">Submit</button>
-	</div>
-  
-</form>
+
+<div class='col-md-5 col-sm-12' id='RecipeModal'>
+
+    <form id='myRecipeBoxForm' method='post' action='models/myRecipeBox' name='myrecipeBoxBody'>
+	    <div class='form-group row'>
+	        <input class='form-control ' type='text' placeholder='Title' name='Title[title]' id='title'>
+	        <input class='form-control' type='text' placeholder='Source' name='source' id='source'>
+	        <input class='form-control ' type='text' placeholder='Servings' name='Servings' 
+	        id='servings'>
+	        <input class='form-control' type='text' placeholder='Cook Time' name='readyInMinutes' id='readyInMinutes'>
+	        <input class='form-control ' type='text' placeholder='Instructions' name='instructions' id='instructions'>
+	        <input class='form-control' type='text' placeholder='Ingredients' name='ingredients' id='ingredients'>
+	    </div>
+
+      	<div class='form-group'>
+        <input class='btn btn-default' type='submit'>
+      	</div>
+    </form>
+  </div>
