--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,6 +4,12 @@
 	<title>Recipe Box</title>
 	<link rel="stylesheet" href="/css/bootstrap.css"/>
 	<link rel="stylesheet" href="/css/style.css"/>
+   <script language="JavaScript">
+    function showInput() {
+        document.getElementById('display').innerHTML = 
+                    document.getElementById("user_input").value;
+    }
+  </script>
 </head>
 
 <body>
