--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,18 +4,30 @@
 <div class='col-md-5 col-sm-12' id='RecipeModal'>
 
     <form id='myRecipeBoxForm' method='post' action='models/myRecipeBox' name='myrecipeBoxBody'>
-	    <div class='form-group row'>
-	        <input class='form-control ' type='text' placeholder='Title' name='Title[title]' id='title'>
-	        <input class='form-control' type='text' placeholder='Source' name='source' id='source'>
-	        <input class='form-control ' type='text' placeholder='Servings' name='Servings' 
-	        id='servings'>
-	        <input class='form-control' type='text' placeholder='Cook Time' name='readyInMinutes' id='readyInMinutes'>
-	        <input class='form-control ' type='text' placeholder='Instructions' name='instructions' id='instructions'>
-	        <input class='form-control' type='text' placeholder='Ingredients' name='ingredients' id='ingredients'>
-	    </div>
 
-      	<div class='form-group'>
-        <input class='btn btn-default' type='submit'>
-      	</div>
+		<div class="form-group"> <!-- title field -->
+			<label class="control-label " for="title">Title</label>
+			<input class="form-control" id="title" name="title" type="text"/>
+		</div>
+		
+		<div class="form-group"> <!-- author field -->
+			<label class="control-label " for="author">Author</label>
+			<input class="form-control" id="author" name="author" type="text"/>
+		</div>
+		
+		<div class="form-group"> <!-- yeild field -->
+			<label class="control-label " for="yeild">Yeild Amount</label>
+			<input class="form-control" id="yeild" name="yeild" type="text"/>
+		</div>
+		
+		<div class="form-group"> <!-- recipe field -->
+			<label class="control-label " for="recipe">Recipe</label>
+			<textarea class="form-control" cols="40" id="recipe" name="recipe" rows="10"></textarea>
+		</div>
+		
+		<div class="form-group">
+			<button class="btn btn-primary " name="submit" type="submit" onclick="showInput();">Submit</button>
+		</div>	
+
     </form>
   </div>
